Add reading age calculations into reports

--- a/reports/http_www.bccdc.ca_health-info_diseases-conditions_covid-19.html
+++ b/reports/http_www.bccdc.ca_health-info_diseases-conditions_covid-19.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.23 / Average score: 0.248</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>14th and 15th grade</p>
 
 
     <p>In here we put:</p>
