--- a/reports/http_www.presidencia.gob.ve_Site_Web_Principal_paginas_classIndex.php.html
+++ b/reports/http_www.presidencia.gob.ve_Site_Web_Principal_paginas_classIndex.php.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.02 / Average score: 0.02666666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>19th and 20th grade</p>
 
 
     <p>In here we put:</p>
