--- a/reports/https_coronavirus.idaho.gov_.html
+++ b/reports/https_coronavirus.idaho.gov_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.06 / Average score: 0.05714285714285714</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>8th and 9th grade</p>
 
 
     <p>In here we put:</p>
