--- a/reports/https_coronavirus.in.gov_.html
+++ b/reports/https_coronavirus.in.gov_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.17 / Average score: 0.16666666666666666</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>11th and 12th grade</p>
 
 
     <p>In here we put:</p>
