--- a/reports/https_covid19.ncdc.gov.ng.html
+++ b/reports/https_covid19.ncdc.gov.ng.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.81 / Average score: 0.7926666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>54th and 55th grade</p>
 
 
     <p>In here we put:</p>
