--- a/reports/https_en.ssi.dk.html
+++ b/reports/https_en.ssi.dk.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.09 / Average score: 0.098</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>2nd and 3rd grade</p>
 
 
     <p>In here we put:</p>
