--- a/reports/https_www.gov.bb_coronaviru.html
+++ b/reports/https_www.gov.bb_coronaviru.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.02 / Average score: 0.026666666666666665</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>1st and 2nd grade</p>
 
 
     <p>In here we put:</p>
