--- a/reports/https_www.gov.sg_features_covid-19.html
+++ b/reports/https_www.gov.sg_features_covid-19.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.25 / Average score: 0.27666666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>13th and 14th grade</p>
 
 
     <p>In here we put:</p>
