--- a/reports/https_www.health.ny.gov_diseases_communicable_coronavirus_.html
+++ b/reports/https_www.health.ny.gov_diseases_communicable_coronavirus_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.87 / Average score: 0.894</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>10th and 11th grade</p>
 
 
     <p>In here we put:</p>
