--- a/reports/https_www.ministeriodesalud.go.cr_index.php_.html
+++ b/reports/https_www.ministeriodesalud.go.cr_index.php_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.04 / Average score: 0.04</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>6th and 7th grade</p>
 
 
     <p>In here we put:</p>
