--- a/reports/https_www.oesterreich.gv.at_public.html.html
+++ b/reports/https_www.oesterreich.gv.at_public.html.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.91 / Average score: 0.838</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>16th and 17th grade</p>
 
 
     <p>In here we put:</p>
