--- a/reports/http_dominica.gov.dm_corona.html
+++ b/reports/http_dominica.gov.dm_corona.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.17 / Average score: 0.14666666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>10th and 11th grade</p>
 
 
     <p>In here we put:</p>
