--- a/reports/http_health.gov.sr_.html
+++ b/reports/http_health.gov.sr_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.78 / Average score: 0.7766666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>9th and 10th grade</p>
 
 
     <p>In here we put:</p>
