--- a/reports/http_health.gov.vc_health_index.php_c.html
+++ b/reports/http_health.gov.vc_health_index.php_c.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.27 / Average score: 0.2733333333333334</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>18th and 19th grade</p>
 
 
     <p>In here we put:</p>
