--- a/reports/http_www.health.go.ke_covid-19_.html
+++ b/reports/http_www.health.go.ke_covid-19_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.2 / Average score: 0.23363636363636364</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>1st and 2nd grade</p>
 
 
     <p>In here we put:</p>
