--- a/reports/https_boliviasegura.gob.bo_.html
+++ b/reports/https_boliviasegura.gob.bo_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.33 / Average score: 0.2966666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>14th and 15th grade</p>
 
 
     <p>In here we put:</p>
