--- a/reports/https_coronavirus.ohio.gov_wps_portal_gov_covid-19_home.html
+++ b/reports/https_coronavirus.ohio.gov_wps_portal_gov_covid-19_home.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.07 / Average score: 0.05333333333333334</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>16th and 17th grade</p>
 
 
     <p>In here we put:</p>
