--- a/reports/https_coronaviruscolombia.gov.co_.html
+++ b/reports/https_coronaviruscolombia.gov.co_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.69 / Average score: 0.6866666666666666</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>15th and 16th grade</p>
 
 
     <p>In here we put:</p>
