--- a/reports/https_covid19.ca.gov_.html
+++ b/reports/https_covid19.ca.gov_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.95 / Average score: 0.9533333333333334</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>11th and 12th grade</p>
 
 
     <p>In here we put:</p>
