--- a/reports/https_covid19.gov.gd_.html
+++ b/reports/https_covid19.gov.gd_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.13 / Average score: 0.12666666666666668</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>9th and 10th grade</p>
 
 
     <p>In here we put:</p>
