--- a/reports/https_health.mo.gov_living_healthcondiseases_communicable_novel-coronavirus_.html
+++ b/reports/https_health.mo.gov_living_healthcondiseases_communicable_novel-coronavirus_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.56 / Average score: 0.5966666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>16th and 17th grade</p>
 
 
     <p>In here we put:</p>
