--- a/reports/https_jamcovid19.moh.gov.jm_index.html.html
+++ b/reports/https_jamcovid19.moh.gov.jm_index.html.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score:  / Average score: </p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>10th and 11th grade</p>
 
 
     <p>In here we put:</p>
