--- a/reports/https_llyw.cymru_coronafeirws.html
+++ b/reports/https_llyw.cymru_coronafeirws.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.9 / Average score: 0.858</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>9th and 10th grade</p>
 
 
     <p>In here we put:</p>
