--- a/reports/https_manitoba.ca_covid19_.html
+++ b/reports/https_manitoba.ca_covid19_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.32 / Average score: 0.30733333333333335</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>8th and 9th grade</p>
 
 
     <p>In here we put:</p>
