--- a/reports/https_motp.gov.gy_index.php_2015-07-20-18-49-38_2015-07-20-18-50-14_4023-notice-covid-19-emergency-m.html
+++ b/reports/https_motp.gov.gy_index.php_2015-07-20-18-49-38_2015-07-20-18-50-14_4023-notice-covid-19-emergency-m.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.66 / Average score: 0.65</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>12th and 13th grade</p>
 
 
     <p>In here we put:</p>
