--- a/reports/https_presidencia.gob.do_coronavirusrd.html
+++ b/reports/https_presidencia.gob.do_coronavirusrd.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score:  / Average score: </p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>18th and 19th grade</p>
 
 
     <p>In here we put:</p>
