--- a/reports/https_www.alberta.ca_coronavirus-info-for-albertans.aspx.html
+++ b/reports/https_www.alberta.ca_coronavirus-info-for-albertans.aspx.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.45 / Average score: 0.43466666666666665</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>14th and 15th grade</p>
 
 
     <p>In here we put:</p>
