--- a/reports/https_www.bag.admin.ch_bag_en_home_krankheiten_ausbrueche-epidemien-pandemien_aktuelle-ausbrueche-ep.html
+++ b/reports/https_www.bag.admin.ch_bag_en_home_krankheiten_ausbrueche-epidemien-pandemien_aktuelle-ausbrueche-ep.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.52 / Average score: 0.5113333333333333</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>8th and 9th grade</p>
 
 
     <p>In here we put:</p>
