--- a/reports/https_www.bundesgesundheitsministerium.de_coronavirus.html.html
+++ b/reports/https_www.bundesgesundheitsministerium.de_coronavirus.html.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.47 / Average score: 0.5853333333333334</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>9th and 10th grade</p>
 
 
     <p>In here we put:</p>
