--- a/reports/https_www.fhi.no_en_op_novel-coronavirus-facts-advice_.html
+++ b/reports/https_www.fhi.no_en_op_novel-coronavirus-facts-advice_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.69 / Average score: 0.6913333333333334</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>6th and 7th grade</p>
 
 
     <p>In here we put:</p>
