--- a/reports/https_www.gouvernement.fr_en_coronavirus-covid-19.html
+++ b/reports/https_www.gouvernement.fr_en_coronavirus-covid-19.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.26 / Average score: 0.3466666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>12th and 13th grade</p>
 
 
     <p>In here we put:</p>
