--- a/reports/https_www.gub.uy_ministerio-salud-publica_coronavirus.html
+++ b/reports/https_www.gub.uy_ministerio-salud-publica_coronavirus.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.21 / Average score: 0.21333333333333332</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>9th and 10th grade</p>
 
 
     <p>In here we put:</p>
