--- a/reports/https_www.health.go.ug_covid_.html
+++ b/reports/https_www.health.go.ug_covid_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.3 / Average score: 0.2826666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>5th and 6th grade</p>
 
 
     <p>In here we put:</p>
