--- a/reports/https_www.michigan.gov_coronavirus.html
+++ b/reports/https_www.michigan.gov_coronavirus.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.13 / Average score: 0.13733333333333334</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>7th and 8th grade</p>
 
 
     <p>In here we put:</p>
