--- a/reports/https_www.mscbs.gob.es_en_profesionales_saludPublica_ccayes_alertasActual_nCov-China_home.htm.html
+++ b/reports/https_www.mscbs.gob.es_en_profesionales_saludPublica_ccayes_alertasActual_nCov-China_home.htm.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.47 / Average score: 0.322</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>11th and 12th grade</p>
 
 
     <p>In here we put:</p>
