--- a/reports/https_www.nhs.uk_conditions_coronavirus-covid-19_.html
+++ b/reports/https_www.nhs.uk_conditions_coronavirus-covid-19_.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.93 / Average score: 0.9626666666666667</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>11th and 12th grade</p>
 
 
     <p>In here we put:</p>
