--- a/reports/https_www.nhsinform.scot_coronavirus.html
+++ b/reports/https_www.nhsinform.scot_coronavirus.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.59 / Average score: 0.5433333333333333</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>11th and 12th grade</p>
 
 
     <p>In here we put:</p>
