--- a/reports/https_www.ontario.ca_page_2019-novel-coronavirus.html
+++ b/reports/https_www.ontario.ca_page_2019-novel-coronavirus.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.53 / Average score: 0.48</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>10th and 11th grade</p>
 
 
     <p>In here we put:</p>
