--- a/reports/https_www.oregon.gov_oha_PH_DISEASESCONDITIONS_DISEASESAZ_20Pages_emerging-respiratory-infections.as.html
+++ b/reports/https_www.oregon.gov_oha_PH_DISEASESCONDITIONS_DISEASESAZ_20Pages_emerging-respiratory-infections.as.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.41 / Average score: 0.428</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>5th and 6th grade</p>
 
 
     <p>In here we put:</p>
