--- a/reports/https_www.qld.gov.au_health_conditions_health-alerts_coronavirus-covid-19.html
+++ b/reports/https_www.qld.gov.au_health_conditions_health-alerts_coronavirus-covid-19.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.32 / Average score: 0.32466666666666666</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>9th and 10th grade</p>
 
 
     <p>In here we put:</p>
