--- a/reports/https_www2.gnb.ca_content_gnb_en_departments_ocmoh_cdc_content_respiratory_diseases_coronavirus.html.html
+++ b/reports/https_www2.gnb.ca_content_gnb_en_departments_ocmoh_cdc_content_respiratory_diseases_coronavirus.html.html
@@ -99,7 +99,7 @@
 		<h3>Performance</h3>
 		<p>Current score: 0.46 / Average score: 0.4573333333333333</p>
 		<h3>Reading age</h3>
-		<p>tbd</p>
+		<p>15th and 16th grade</p>
 
 
     <p>In here we put:</p>
