--- a/template.html
+++ b/template.html
@@ -104,6 +104,7 @@
 	<p><img src="{{loading_gif_filename}}" alt="Site loading" width="120" height="192" style="height: auto; width: auto"/></p>
 
 	<h2>How it's done over time</h2>
+	<p><img src="{{timelapse_filename}}" alt="Timelapse" /></p>
 	<p><img src="{{graph_filename}}_accessibility.png" alt="Accessibility score over time" /></p>
 	<p><img src="{{graph_filename}}_performance.png" alt="performance score over time" /></p>
     <p>In here we put:</p>
