Updated set of reports

--- a/reports/https_covid19.ncdc.gov.ng.html
+++ b/reports/https_covid19.ncdc.gov.ng.html
@@ -98,10 +98,10 @@
 		<h3>Performance</h3>
 		<p>Current score:  / Average score: </p>
 		<h3>Reading age</h3>
-		<p>54th and 55th grade</p>
+		<p>43rd and 44th grade</p>
 
 	<h2>What it feels like to watch it load</h2>
-	<p><img src="/reports/loading/https_covid19.ncdc.gov.ng.gif" alt="Site loading" width="120" height="192" style="height: auto; width: auto"/></p>
+	<p><img src="" alt="Site loading" width="120" height="192" style="height: auto; width: auto"/></p>
 
 	<h2>How it's done over time</h2>
 	<p><img src="" alt="Timelapse" /></p>
