--- a/reports/https_coronaviruscolombia.gov.co_.html
+++ b/reports/https_coronaviruscolombia.gov.co_.html
@@ -101,7 +101,7 @@
 		<p>15th and 16th grade</p>
 
 	<h2>What it feels like to watch it load</h2>
-	<p><img src="/reports/loading/https_coronaviruscolombia.gov.co_.gif" alt="Site loading" width="120" height="192" style="height: auto; width: auto"/></p>
+	<p><img src="" alt="Site loading" width="120" height="192" style="height: auto; width: auto"/></p>
 
 	<h2>How it's done over time</h2>
 	<p><img src="" alt="Timelapse" /></p>
